--- a/ch.Delay/app/build.gradle
+++ b/ch.Delay/app/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
+    implementation files('lib/layer7-api-8.11.03.jar')
 }
 
 application {
